--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <h1>Hello Mam,</h1>
         <p>How are you?</p>
         <p>It's me, ________ <i>(fill yourself)</i></p>
-        <p>Hai, yo maile tmero lage banaudai xu hai...</p>
+        <p>Hai, yo maile tmero lage banaudai xu hai. I mean, like malai tme man parxa aru k vanum like this is like monologue kya. Ma aafai feeling vaneyako xu, monologue vaneko eklai bolne ho, testai ho aba tme google gara aba vanxu.</p>
+    <p>Story begins now:</p>
+    <p>Hai like tmelai Maile first xote dhekhdha notice gareko thiyena tara 1 din like i see you, Matlab pahela ne dhekheko thiye. Like mero man ma halchal vayo pane paryo tmelai dhekhne bitikai vana ta man thiyo tara k garum yesto vayena. Like tme kasto cutee dhekheko thiyau chau pane ahele thaxa maile god lai wish gareko thiye. Tmelai dhekhne bitikai sorry la ma k k vaneyako xu la aba continue click gara boring vayo hola.</p>
         <button onclick="goToPage4()">Continue &#8594;</button>
     </div>
 
